<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/updatebackground" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textView_title"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias=".2"/>


            <TextView
                android:id="@+id/textView_title"
                android:layout_width="180dp"
                android:layout_height="82dp"
                android:fontFamily="@font/droid_sans_bold"
                android:text="SubLearn"
                android:textColor="#252525"
                android:textSize="39sp"
                app:layout_constraintBottom_toTopOf="@+id/UserEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

            <EditText
                android:id="@+id/UserEmail"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/UserPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/UserPassword"
                android:layout_width="258dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_you_password"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserEmail"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="174dp"
                android:layout_height="66dp"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textColor="#FFF85B"
                android:textSize="24sp"
                app:backgroundTint="#252525"
                app:layout_constraintBottom_toTopOf="@+id/textCreate"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserPassword" />

            <TextView
                android:id="@+id/textCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_sublearn"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/buttonCreate"
                tools:layout_editor_absoluteY="522dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="@string/sign_up"
                android:textColor="#00BCD4"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCreate" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>