<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".RegisterActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/accountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="130dp"
                android:fontFamily="@font/archivo_black"
                android:text="Create SubLearn Account"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/createName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/createName"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/enter_your_first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@id/makeEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountTitle" />

            <EditText
                android:id="@+id/makeEmail"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@id/makePassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createName" />

            <EditText
                android:id="@+id/makePassword"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/enter_a_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/makeAccount"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/makeEmail" />

            <Button
                android:id="@+id/makeAccount"
                android:layout_width="174dp"
                android:layout_height="66dp"
                android:layout_marginBottom="144dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create"
                android:textColor="#FFF72F"
                android:textSize="24sp"
                app:backgroundTint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/makePassword" />

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias=".03"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".02" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>