<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/updatebackground"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StatisticActivity"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:src="@drawable/home"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias=".03"
                app:layout_constraintVertical_bias=".02"
                tools:layout_editor_absoluteX="346dp"
                tools:layout_editor_absoluteY="16dp"
                android:contentDescription="@string/go_to_settings" />

            <TextView
                android:id="@+id/titleStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_black"
                android:text="@string/search_by_suburb"
                android:textColor="#252525"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/contextStatistics"
                android:layout_marginTop="70dp"
                app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                android:id="@+id/contextStatistics"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:fontFamily="sans-serif"
                android:text="Enter a Victorian suburb to display recorded crash statistics within that suburb between 2014 and 2019"
                android:textColor="#252525"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleStatistics"
                app:layout_constraintBottom_toTopOf="@id/inputStatistics"
                android:layout_marginTop="40dp"/>

            <EditText
                android:id="@+id/inputStatistics"
                android:layout_width="350dp"
                android:layout_height="44dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="no"
                android:ems="10"
                android:hint="Enter Suburb Name"
                android:inputType="textPersonName"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contextStatistics"
                android:layout_marginTop="30dp"
                />

            <Button
                android:id="@+id/buttonStatistics2"
                android:layout_width="174dp"
                android:layout_height="66dp"
                android:text="Search"
                android:textColor="#FFF85B"
                android:textSize="20sp"
                app:backgroundTint="#252525"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputStatistics"
                app:layout_constraintBottom_toTopOf="@id/valueStatistics"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/valueStatistics"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/result_Statistic"
                android:textColor="#252525"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonStatistics2"
                android:layout_marginTop="40dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/statsList"
                android:layout_width="350dp"
                android:layout_height="280dp"
                android:background="#00FFFFFF"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonStatistics2"
                tools:listitem="@layout/statistics"
                android:layout_marginTop="30dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


