<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/updatebackground" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecordActivity"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:src="@drawable/home"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias=".03"
                app:layout_constraintVertical_bias=".02"
                tools:layout_editor_absoluteX="346dp"
                tools:layout_editor_absoluteY="16dp"
                android:contentDescription="@string/go_to_settings" />

            <TextView
                android:id="@+id/titleRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_black"
                android:text="@string/record_suburbs_driven"
                android:textColor="#252525"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/contextRecord"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="70dp"/>

            <TextView
                android:id="@+id/contextRecord"
                android:layout_width="350dp"
                android:layout_height="49dp"
                android:fontFamily="sans-serif"
                android:text="@string/context_record"
                android:textColor="#252525"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/inputRecord"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleRecord"
                android:layout_marginTop="40dp"/>

            <EditText
                android:id="@+id/inputRecord"
                android:layout_width="350dp"
                android:layout_height="39dp"
                android:autofillHints="no"
                android:ems="10"
                android:hint="Enter suburb name"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contextRecord"
                app:layout_constraintBottom_toTopOf="@id/rubberSeek"
                android:layout_marginTop="20dp"/>

            <com.jem.rubberpicker.RubberSeekBar
                android:id="@+id/rubberSeek"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:dampingRatio="0.3"
                app:defaultThumbInsideColor="#FFF"
                app:defaultThumbRadius="16dp"
                app:elasticBehavior="cubic"
                app:highlightDefaultThumbOnTouchColor="#CD5D67"
                app:highlightTrackColor="#BA1F33"
                app:highlightTrackWidth="8dp"
                app:layout_constraintBottom_toTopOf="@id/rubberValue"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputRecord"
                android:layout_marginTop="10dp"
                app:maxValue="10"
                app:minValue="0"
                app:normalTrackColor="#AAAAAA"
                app:normalTrackWidth="4dp"
                app:stiffness="300"
                app:stretchRange="24dp" />

            <TextView
                android:id="@+id/rubberValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/buttonRecord2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rubberSeek"
                android:layout_marginTop="10dp"/>


            <Button
                android:id="@+id/buttonRecord2"
                android:layout_width="174dp"
                android:layout_height="66dp"
                android:text="Record"
                android:textColor="#FFF85B"
                android:textSize="20sp"
                app:backgroundTint="#252525"
                app:layout_constraintBottom_toTopOf="@id/userList"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rubberSeek"
                android:layout_marginTop="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userList"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:background="#00FFFFFF"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonRecord2"
                tools:listitem="@layout/user_item"
                android:layout_marginTop="40dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>